--- a/src/App.css
+++ b/src/App.css
@@ -247,7 +247,7 @@
   display: flex;
   justify-content: center;    
 }
-.prev__next {
+.prev__next__top {
   background-color: #0a0a0a;
   display: flex;
   justify-content: space-between;
@@ -259,6 +259,21 @@
   border: 2px solid #00ff00;
   box-shadow: 0px 0px 2px 2px #aeaeae;
 }
+
+.prev__next__botton {
+  background-color: #0a0a0a;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 400px;
+  height: 50px;
+  padding: 0px 20px;
+  border-radius: 30px;
+  border: 2px solid #00ff00;
+  box-shadow: 0px 0px 2px 2px #aeaeae;
+}
+
+
 .label__pages {
   color: #00ff00;
 }
