--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,8 @@ body {
 }
 @media (max-width: 768px) {
 	.header__image {
-		margin: 70px;
-		width: 230px;
+		margin: 50px;
+		width: 350px;
 	}
 	.location__info {
 		display: flex;
@@ -35,14 +35,28 @@ body {
 		width: 230px;
 		margin-bottom: 5px;
 	}
-	.prev__next {
+	.prev__next__top {
+		position: fixed;
+		padding-top: 5px;
+		padding-bottom: 5px;
+		width: 80%;
+		height: 50px;
+		display: flex;
+		z-index: 25;
+		bottom: 10px;
+	}
+	.label__pages {
+		font-size: 15px;
+	}
+
+	.prev__next__botton {
 		padding-top: 20px;
 		padding-bottom: 20px;
 		width: 230px;
-		height: 100px;
+		height: 50px;
 		display: flex;
-		flex-direction: column;
 	}
+
 
 	.resident__more {
 		height: 190px;
