Corrección de acuerdo a sugerencia compañero Academlo

--- a/src/index.css
+++ b/src/index.css
@@ -234,10 +234,19 @@ body {
 
 	.resident__more {
 		height: 190px;
+		
+	  }
+
+	  .small__text {
+		padding-left: 14px;
+	  }
+	  .more__items {
+		padding-left: 14px;
 	  }
 
 	.buttons__paginate {
-		display: none;		
+		display: none;	
 	}
+
 }
 
