--- a/src/App.css
+++ b/src/App.css
@@ -216,6 +216,7 @@
   padding-bottom: 3px;
   border-bottom: 1px dashed #0ad67e67;
   letter-spacing: 1px;
+  padding-left: 15px;
 }
 .small__text {
   padding-top: 2px;
@@ -225,6 +226,7 @@
   font-weight: 400;
   color: #fff;
   letter-spacing: 1px;
+  padding-left: 15px;
 }
 .resident__name {
   display: flex;
@@ -288,10 +290,20 @@
 .buttons__paginate {
   cursor: pointer;
   padding: 7px 12px;
-  background-color: rgb(6, 51, 110);
+  background-color: rgb(10, 10, 10);
   border-radius: 20px;
   box-shadow: 0px 0px 2px 2px #aeaeae;
-  color: #fff;
+  color: #fafafb;
+}
+
+.full__pagination {
+  position: relative;
+  background-color: #015088;
+  display: flex;
+  justify-content: center;
+  padding: 10px 10px;
+  gap: 8px;
+  top: 30px;
 }
 .credits__footer {
   display: flex;
@@ -303,6 +315,7 @@
   color: #00ff00;
   letter-spacing: 2px;
 }
+
 @keyframes steam {
   0% {
       background-position: 0 0;
